--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unsplash-api-nextjs",
+  "name": "nextjs-page-transition-app-router",
   "version": "0.1.0",
   "private": true,
   "scripts": {
